@startuml

title __MAIN's Class Diagram__\n

  namespace com.example.sickar {
    namespace main {
      class com.example.sickar.main.DataViewModel {
          - cacheData : MutableLiveData<BarcodeDataCache>
          - currentRequests : Set<String>
          - currentRequestsData : MutableLiveData<Set<String>>
          - errorData : MutableLiveData<String>
          + DataViewModel()
          + addPicturesToItem()
          + getCacheData()
          + getCurrentRequestsData()
          + getErrorLiveData()
          + getPicturesForItem()
          + getTamperInfo()
          + putBarcodeItem()
          + putError()
          + putError()
          ~ fetchBarcodeData()
          ~ getBarcodeItem()
          ~ putBarcodeItem()
          ~ requestPending()
          - fetchSystemConfig()
          - getBarcodeData()
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      class com.example.sickar.main.MainActivity {
          {static} - TAG : String
          {static} - TUTORIAL_KEY : String
          - arSceneView : ArSceneView
          - backgroundHandler : Handler
          - backgroundHandlerThread : HandlerThread
          - center : PointF
          - clicker : FloatingActionButton
          - itemTouchHelper : ItemTouchHelper
          - mainGestureDetector : GestureDetectorCompat
          - mainHandler : Handler
          - progressBar : ProgressBar
          - recyclerView : RecyclerView
          - reticleAnimateListener : AnimatorListenerAdapter
          - rootView : ConstraintLayout
          - vibrator : Vibrator
          + getRootView()
          + getViewModel()
          + onConfigurationChanged()
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          # onCreate()
          # onDestroy()
          # onPause()
          # onRestoreInstanceState()
          # onResume()
          # onSaveInstanceState()
          - animateRecyclerViewGone()
          - animateRecyclerViewVisible()
          - configureDisplaySize()
          - dataObserver()
          - dispatchTouchEventToArSceneView()
          - errorObserver()
          - getItemListFromStringList()
          - launchTutorial()
          - onUpdate()
          - setRecyclerViewAdapter()
          - setupArSession()
          - setupBackgroundHandler()
          - setupMainHandler()
          - updateRecyclerView()
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      class com.example.sickar.main.MainActivity.MainGestureListener {
          + onDown()
          + onSwipe()
      }
    }
  }
  

  com.example.sickar.main.DataViewModel -up-|> androidx.lifecycle.AndroidViewModel
  com.example.sickar.main.DataViewModel o-- com.example.sickar.main.helpers.BarcodeDataCache : barcodeDataCache
  com.example.sickar.main.DataViewModel o-- com.example.sickar.main.helpers.NetworkRequest : networkRequest
  com.example.sickar.main.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.sickar.main.MainActivity o-- com.example.sickar.main.helpers.ARScene : arScene
  com.example.sickar.main.MainActivity o-- com.example.sickar.main.helpers.BarcodeProcessor : barcodeProcessor
  com.example.sickar.main.MainActivity o-- com.example.sickar.main.helpers.GraphicOverlay : graphicOverlay
  com.example.sickar.main.MainActivity o-- com.example.sickar.main.adapters.ItemRecyclerViewAdapter : recyclerViewAdapter
  com.example.sickar.main.MainActivity o-- com.example.sickar.main.DataViewModel : viewModel
  com.example.sickar.main.MainActivity +-down- com.example.sickar.main.MainActivity.MainGestureListener
  com.example.sickar.main.MainActivity.MainGestureListener -up-|> com.example.sickar.libs.OnSwipeListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
